--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-channel_list.txt
-/csv
-/json
-/files
+.zip
+.cab
